# YETI

./: .env.example  .gitignore  Dockerfile  README.md  claude.md  design.md  docker-compose.yml  pyproject.toml  task.md
.claude/memory/: MEMORY.md  README.md  feedback_be_opinionated.md  feedback_deploy_later.md  feedback_no_coauthor.md  feedback_validate_first.md  feedback_wing_isolation.md  project_image_fallback.md  project_inbox_concept.md  project_maturation_pipeline.md  project_memory_philosophy.md  project_people_pipeline.md  project_yeti_overview.md  user_daniel.md  user_workflow.md
base_knowledge/: startingpoint.md
config/: deploy.yml
docs/: claude-ai-yeti-project-instructions.md
src/yeti/: __init__.py  __main__.py  app.py  config.py  identity.py  llm.py  mcp_server.py  migrations.py  worker.py
src/yeti/agents/: chat.py  clarify.py  name_resolver.py  prefilter.py  triage.py
src/yeti/api/: actions.py  entity.py  images.py  inbox.py  integrations.py  memory.py  notes.py  tasks.py  usage.py
src/yeti/bot/: telegram.py
src/yeti/cli/: main.py
src/yeti/dashboard/: routes.py
tests/: test_actions.py  test_app.py  test_dashboard_render.py  test_disambiguation.py  test_email_body.py  test_email_filters.py  test_identity.py  test_image_fallback.py  test_inbox.py  test_name_resolver.py  test_notes.py  test_outlook_parse.py  test_prefilter.py  test_resolution_patterns.py  test_retrieval_log.py  test_sleep_dedupe.py  test_sleep_gaps.py  test_sleep_reconcile.py  test_sleep_summary.py  test_tasks.py  test_triage_forced_wing.py  test_usage.py
(+37 files in other folders)
