[project]
name = "yeti"
version = "0.1.0"
description = "Your Everyday Task Intelligence — AI-centric productivity system"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "litellm>=1.60",
    "pydantic-ai>=0.1",
    "python-telegram-bot>=21",
    "celery[redis]>=5.4",
    "typer>=0.15",
    "rich>=13",
    "httpx>=0.28",
    "pytesseract>=0.3",
    "Pillow>=10",
    "mempalace>=3.1",
    "google-auth>=2.30",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.140",
    "msal>=1.28",
    "redis>=5",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]

[project.scripts]
yeti = "yeti.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yeti"]

[tool.ruff]
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
